Keypad height fixed on mobile version

--- a/style/style.css
+++ b/style/style.css
@@ -220,7 +220,7 @@ h2 {
   .calculator {
     width: 30em;
     height: 95vh;
-    margin: 0 auto;
+    margin: 2em auto 0;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -230,7 +230,7 @@ h2 {
     font-size: var(--key-size-mobile);
   }
   .keypad {
-    height: auto;
+    height: 60vh;
     position: absolute;
     z-index: 10;
     bottom: 0;
